--- a/src/main/resources/META-INF/i/resources/index.html
+++ b/src/main/resources/META-INF/i/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>quarkus-backend-person - 1.0.0-SNAPSHOT</title>
+        <title>quarkus-person-backend - 0.0.1</title>
         <style>
             body {
                 margin: 0;
@@ -236,8 +236,8 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>core.ics</code></li>
-                                <li>ArtifactId: <code>quarkus-backend-person</code></li>
-                                <li>Version: <code>1.0.0-SNAPSHOT</code></li>
+                                <li>ArtifactId: <code>quarkus-person-backend</code></li>
+                                <li>Version: <code>0.0.1</code></li>
                                 <li>Quarkus Version: <code>2.11.3.Final</code></li>
                             </ul>
                         </div>
